--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 						<img src="images/groom.jpg" class="img-responsive" alt="">
 						<div class="desc">
 							<h2>Артем Проничев</h2>
-							<p>Борец, огурец и молодец!</p>
+							<p>Инженер по машинному обучению<br>Любит Настю</p>
 							<ul class="social social-circle">
 								<li><a href="https://www.instagram.com/teyoma/"><i class="icon-instagram"></i></a></li>
 							</ul>
@@ -180,7 +180,7 @@
 						<img src="images/bride.jpg" class="img-responsive" alt="">
 						<div class="desc">
 							<h2>Анастасия Антонюк</h2>
-							<p>Умница, красавица и просто солнышко!</p>
+							<p>Учитель русского языка и литературы<br>Любит Артема и собачек</p>
 							<ul class="social social-circle">
 								<li><a href="https://www.instagram.com/tranduil_kili/"><i class="icon-instagram"></i></a></li>
 							</ul>
